--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AttributeInjection.Lib\AttributeInjection.Lib.csproj" />
+    <ProjectReference Include="..\AttributeInjection.Lib\AttributeInjection.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
